icons issue on mobile firefox

--- a/css/works.css
+++ b/css/works.css
@@ -81,7 +81,7 @@
         line-height: 2em;
     }
     .work-item ul li {
-        width: 30%;
+        width: auto;
         min-width: 70px;
         height: auto;
     }
